--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@material-ui/core": "^4.11.4",
     "arweave": "^1.10.14",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
